refactor: refactor CategoryMapperImpl to use Stream.toList() (#25)